# my-gl

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
assets/shaders/: default.frag  default.vert
src/: camera.c  camera.h  main.c  shader.c  shader.h  texture.c  texture.h  utils.c  utils.h
